--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,9 @@
 	
 	<!-- MySQLConnector -->
 	<dependency>
-	    <groupId>mysql</groupId>
-	    <artifactId>mysql-connector-java</artifactId>
-	    <version>6.0.4</version>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>[8.0.16,)</version>
 	</dependency>
 	
 	<!-- Injection -->
